--- a/rep01.html
+++ b/rep01.html
@@ -31,9 +31,17 @@
       <img src="imgfile.jpg">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        scratch
+        　背景を座標に変える
+        　ネコの動きに合わせて線を引く
+        　ネコを移動させるプログラム
+        　移動に合わせて線を引く
+        　書くたびに線の色を変える
+        　繰り返し移動させて図形を描く<br>
         2.感想<br>
-        かんそうかんそう<br>
+        scratchを使ったことはあったけど、実習で使ってみると知らないことだらけでした。
+        プログラミングはプログラムを作ると作った通りに動くので、動かしたいものに細かく指示をしないといけないとわかりました。
+        <br>
       </div>
     </div>
 
@@ -52,9 +60,9 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 自分のホームページのURLに置き替える↓ -->
-        <a href="https://tmhrdoi.github.io/website/">私のホームページ</a><br>
+        <a href="https://saesaee.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        githubのアカウントをつくる。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>      
@@ -62,7 +70,7 @@
     
   </div>
   <div class=footer>
-    作成日：20xx年xx月xx日
+    作成日：2022年5月18日
   </div>
 </body>
 </html>
