--- a/rep01.html
+++ b/rep01.html
@@ -62,7 +62,11 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://saesaee.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        githubのアカウントをつくる。<br>
+        githubのアカウントをつくる。
+        アカウントにログインする
+        homepageをつくる
+        homepageを編集する
+        webレポートの作成<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>      
