--- a/rep01.html
+++ b/rep01.html
@@ -28,7 +28,7 @@
     <h2>第1週目</h2>
     <div>
       <h3>1-1 サイエンスアート</h3>
-      <img src="imgfile.jpg">
+      <img src="scratch01.png">
       <div>
         1.内容<br>
         scratch
@@ -41,6 +41,8 @@
         2.感想<br>
         scratchを使ったことはあったけど、実習で使ってみると知らないことだらけでした。
         プログラミングはプログラムを作ると作った通りに動くので、動かしたいものに細かく指示をしないといけないとわかりました。
+        実習で使ったことを応用したりすれば、もっといろいろなものが作れそうでおもしろいなと思いました。
+        
         <br>
       </div>
     </div>
@@ -62,13 +64,16 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://saesaee.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        githubのアカウントをつくる。
+        githubのアカウントをつくる
         アカウントにログインする
         homepageをつくる
         homepageを編集する
-        webレポートの作成<br>
+        webレポートを作成する<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        自分が作ったホームページが調べると出てきて嬉しかったです。
+        けど、いろいろな作業があったのでホームページを作るのは大変だなと思いました。
+        普段見ているホームページは、今日作ったように作られているのかなと思いました。
+       これからもっと知識や情報を学んで、自分のホームページを良くさせたいなと思いました。 <br>        
       </div>      
     </div>
     
