--- a/rep01.html
+++ b/rep01.html
@@ -32,15 +32,17 @@
       <div>
         1.内容<br>
         scratch
-        　背景を座標に変える
-        　ネコの動きに合わせて線を引く
-        　ネコを移動させるプログラム
-        　移動に合わせて線を引く
-        　書くたびに線の色を変える
-        　繰り返し移動させて図形を描く<br>
+        　背景を座標に変える。
+        　ネコの動きに合わせて線を引く。
+        　ネコを移動させるプログラムを作る。
+        　ペンを追加して、移動に合わせて線を引く。
+        　書くたびに線の色を変える。
+        　繰り返し移動させて図形を描く。
+        <br>
         2.感想<br>
         scratchを使ったことはあったけど、実習で使ってみると知らないことだらけでした。
         プログラミングはプログラムを作ると作った通りに動くので、動かしたいものに細かく指示をしないといけないとわかりました。
+        また、プログラムを繰り返させると同じことをコンピューターやロボットはしてくれるので、私はコンピューターやロボットを動かせるようになりたいなと思いました。
         実習で使ったことを応用したりすれば、もっといろいろなものが作れそうでおもしろいなと思いました。
         自分が作ったプログラムが思い通りに動くととても嬉しかったです。
         
@@ -65,15 +67,17 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://saesaee.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-         githubのアカウントをつくる
-         アカウントにログインする
-         homepageをつくる
-         homepageを編集する
-         webレポートを作成する<br>
+         githubのアカウントをつくる。
+         アカウントにログインする。
+         homepageをつくる。
+         homepageを編集する。
+         webレポートを作成する。<br>
         2.感想<br>
         自分が作ったホームページが調べると出てきて嬉しかったです。
         けど、いろいろな作業があったのでホームページを作るのは大変だなと思いました。
         普段見ているホームページは、今日作ったように作られているのかなと思いました。
+        今までは、ホームページは見るものだったので自分で作れることがすこし不思議な感じでした。
+        中学校まででは、ホームページを作ることはできなかったので今日できて楽しかったです。
         これからもっと知識や情報を学んで、自分のホームページを良くさせたいなと思いました。 
         
         <br>        
