--- a/rep01.html
+++ b/rep01.html
@@ -25,7 +25,7 @@
     <div>4組7番 さー</div>
   </div>
   <div class=1week>
-    <h2>第1週目</h2>
+    <h2>第1週目と2週目</h2>
     <div>
       <h3>1-1 サイエンスアート</h3>
       <img src="scratch01.png">
