--- a/rep01.html
+++ b/rep01.html
@@ -55,7 +55,12 @@
       <img src="game.png">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        scratchを使ったゲームプログラム
+        　ネコを移動させる
+        　りんごを落とす
+        　位置と落下速度をランダムにする
+        　点数をつける
+        　音を追加する<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
