--- a/rep01.html
+++ b/rep01.html
@@ -57,7 +57,7 @@
         1.内容<br>
         scratchを使ったゲームプログラム
         　ネコを移動させる
-        　りんごを落とす
+        　りんごを落とす、りんごを消す
         　位置と落下速度をランダムにする
         　点数をつける
         　音を追加する<br>
