--- a/rep01.html
+++ b/rep01.html
@@ -38,6 +38,7 @@
         　ペンを追加して、移動に合わせて線を引く。
         　書くたびに線の色を変える。
         　繰り返し移動させて図形を描く。
+        　円のような図形が出来上がる。
         <br>
         2.感想<br>
         scratchを使ったことはあったけど、実習で使ってみると知らないことだらけでした。
@@ -56,13 +57,19 @@
       <div>
         1.内容<br>
         scratchを使ったゲームプログラム
-        　ネコを移動させる
-        　りんごを落とす、りんごを消す
-        　位置と落下速度をランダムにする
-        　点数をつける
-        　音を追加する<br>
+        　ネコを移動させる。
+        　りんごを落とす、りんごを消す。
+        　位置と落下速度をランダムにする。
+        　点数をつける。
+        　音を追加する。
+        　プログラムを繰り返させる。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        ネコを移動させてリンゴに当たったら点数が増えるという単純なゲームだったけど、プログラミングでプログラムをつくるのは全然簡単ではなかったです。
+        ネコにはネコへのプログラムをつくって、リンゴにはリンゴのプログラムをつくってというように一つ一つプログラムをつくって自分の思うように動かすのが難しかったです。
+        身の回りにあるゲームもこのようにして、つくっているのかなと思うとゲームをつくっている人ってすごいなと思いました。
+        何も考えずに使って遊んでいたゲームがつくられている背景はこんな感じなのかなと感じることができました。
+        音だけでもいろいろな音があったうえに、音や点数以外にもいろいろな機能があったので、もっと複雑でおもしろいゲームもつくれそうだなと思いました。
+        <br>        
       </div>
     </div>
 
