--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div1組N番 ニックネーム</div>
+    <div1組7番 ニックネーム</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -32,9 +32,10 @@
       <img src="mlsae.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        teachable machineでカメラを使って自分の手のグー、パーを覚えさせた。そして、再びグーかパーをカメラに映すとAIがグーかパーかを判別するようにした。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        自分の手のグーかパーかをAIに判断してもらって面白かったです。
+        少し違う形を映すと、グーかパーか判断に困っていた。<br>        
       </div>
     </div>
     
@@ -52,7 +53,7 @@
     
   </div>
   <div class=footer>
-    作成日：2022年07月20日
+    作成日：2022年09月21日
   </div>
 </body>
 </html>
