--- a/rep02.html
+++ b/rep02.html
@@ -32,10 +32,13 @@
       <img src="mlsae.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        teachable machineでカメラを使って自分の手のグー、パーを覚えさせた。そして、再びグーかパーをカメラに映すとAIがグーかパーかを判別するようにした。<br>
+        teachable machineでカメラを使って自分の手のグー、パーを覚えさせた。
+        そして、再びグーかパーをカメラに映すとAIがグーかパーかを判別するようにした。<br>
         2.感想<br>
         自分の手のグーかパーかをAIに判断してもらって面白かったです。
-        少し違う形を映すと、グーかパーか判断に困っていた。<br>        
+        少し違う形を映すと、グーかパーか判断に困っていたことから、AIはカメラによって覚えさせないと何なのか判断できないということを感じました。
+        でも、AIは一度覚えさせたら忘れないということが人間との違いかなと思いました。
+        <br>        
       </div>
     </div>
     
