--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div1組7番 ニックネーム</div>
+    <div4組7番 ニックネーム</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -38,6 +38,7 @@
         自分の手のグーかパーかをAIに判断してもらって面白かったです。
         少し違う形を映すと、グーかパーか判断に困っていたことから、AIはカメラによって覚えさせないと何なのか判断できないということを感じました。
         でも、AIは一度覚えさせたら忘れないということが人間との違いかなと思いました。
+        私は、二人組でやったのですが、どっちの手でも正しく判断してもらえて嬉しかったです。
         <br>        
       </div>
     </div>
