--- a/rep03.html
+++ b/rep03.html
@@ -31,7 +31,9 @@
       <a href="https://saesaee.github.io/website/prog.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        JavaScriptで伝言プログラムを作成した。
+        まず、テキストのみがブラウザで表示されるように打ち込む。次に、2行目を追加する。HTMLでも改行して表示されるように「HTMLタグ」を使って2行目を作成する。
+        ここから、伝言アプリを作成していく。伝言を入力するためのパーツを追加し、ボタンを押すと写真のような伝言が表示されるようにプログラミングを作成した。<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
@@ -61,7 +63,7 @@
   </div>
                                                              
   <div class=footer>
-    作成日：2022年07月27日
+    作成日：2022年09月21日
   </div>
 </body>
 </html>
