--- a/rep03.html
+++ b/rep03.html
@@ -35,7 +35,10 @@
         まず、テキストのみがブラウザで表示されるように打ち込む。次に、2行目を追加する。HTMLでも改行して表示されるように「HTMLタグ」を使って2行目を作成する。
         ここから、伝言アプリを作成していく。伝言を入力するためのパーツを追加し、ボタンを押すと写真のような伝言が表示されるようにプログラミングを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        身の回りのものに比べたらシンプルなプログラムだったのかもしれないけれど、プログラムを書くと複雑そうに見えました。
+        今まで記号やアルファベットでプログラムが書かれていると、自分にはできないだろうと思っていたので、今回自分で伝言アプリを作れて嬉しかったです。
+        「HTMLタグ」は今回使ったもの以外にもたくさんあったので、それらを使えば今回の伝言アプリを進化させることもできそうだし、他のまた違ったアプリも作れそうだと思いました。
+         身の回りのものでこのようなプログラムで動いているものは、プログラムを人が打ち込んで作っているということを感じられて良かったです。<br>
       </div>
     </div>
 
