--- a/rep03.html
+++ b/rep03.html
@@ -21,7 +21,7 @@
 <body>
   <div class=header>
     <h1>最終レポート ： 公大高専１年実習I-1</h1>
-    <div>4組7番 鍛冶屋</div>
+    <div>4組7番 さー</div>
   </div>
   <div class=3week>
     <h2>第3週目</h2>
@@ -55,13 +55,13 @@
   <div class=2week>
     <h2>第2週目のレポート</h2>
       <div>
-        <a href="https://tmhrdoi.github.io/website/rep02.html">2週目のレポート</a><br>
+        <a href="https://saesaee.github.io/website/rep02.html">2週目のレポート</a><br>
       </div>
   </div>
   <div class=1week>
     <h2>第1週目のレポート</h2>
       <div>
-        <a href="https://tmhrdoi.github.io/website/rep01.html">1週目のレポート</a><br>
+        <a href="https://saesaee.github.io/website/rep01.html">1週目のレポート</a><br>
       </div>
   </div>
                                                              
