--- a/rep02.html
+++ b/rep02.html
@@ -46,7 +46,7 @@
      <div>
       <h3>2-3 JavaScript体験：３次元モデルのプログラムを作る</h3>
       <img src="3d.png" alt="3D" width="50%" height="50%"><br>
-      <a href="vr01">３次元モデル</a><br>                                   
+      <a href="BLOCKVROCKのURL">３次元モデル</a><br>                                   
       <div>
         1.内容<br>
         ないようないよう<br>
