--- a/rep02.html
+++ b/rep02.html
@@ -45,7 +45,7 @@
     
      <div>
       <h3>2-3 JavaScript体験：３次元モデルのプログラムを作る</h3>
-      <img src="3d.png" alt="3D" width="50%" height="50%"><br>
+      <img src="vr.png" alt="3D" width="50%" height="50%"><br>
       <a href="BLOCKVROCKのURL">３次元モデル</a><br>                                   
       <div>
         1.内容<br>
@@ -58,7 +58,7 @@
     
   </div>
   <div class=footer>
-    作成日：2022年09月21日
+    作成日：2022年09月28日
   </div>
 </body>
 </html>
