--- a/rep02.html
+++ b/rep02.html
@@ -45,7 +45,7 @@
     
      <div>
       <h3>2-3 JavaScript体験：３次元モデルのプログラムを作る</h3>
-      <img src="vr.png" alt="3D" width="50%" height="50%"><br>
+      <img src="vr01.png" alt="3D" width="50%" height="50%"><br>
       <a href="https://saesaee.github.io/website/vr.html">３次元モデル</a><br>                                   
       <div>
         1.内容<br>
