--- a/rep02.html
+++ b/rep02.html
@@ -49,7 +49,9 @@
       <a href="https://saesaee.github.io/website/vr.html">３次元モデル</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        A-Frameのプログラムを用い、JavaScriptを使って3次元モデルのプログラムを作成した。
+        positionは位置、rotationは角度、colorは色、radiusは半径を表している。
+        そのため、それぞれの数字を変えると位置や色が変わり、自分の3次元モデルが作れる。<br>
         2.感想<br>
         かんそうかんそう<br>
         
