--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div4組7番 ニックネーム</div>
+    <div4組7番 さー</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -53,7 +53,10 @@
         positionは位置、rotationは角度、colorは色、radiusは半径を表している。
         そのため、それぞれの数字を変えると位置や色が変わり、自分の3次元モデルが作れる。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        数字を少し変えるだけで、また違った３次元モデルを作ることができました。
+        VRで作っているので実際にどうなっているのか空間把握能力が必要だと思いました。
+        コンピュータでの設計やCADでの設計もこんな感じの３次元モデルなのかなと思いました。<br>
+        球、円柱、立方体とシンプルな形からのスタートだったけど、プログラムを変えるといろいろな形を作ることができて、楽しかったです。
         
       </div>
     </div>
