--- a/rep03.html
+++ b/rep03.html
@@ -46,9 +46,11 @@
       <h3>3-2 VR体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを使ってVR体験をした。
+        実習2周目の3次元モデルのVR体験では、3次元モデルの中のものを移動させたり、球を出したりできた。
+        会議室のVR体験は、ホワイトボードに書いたり、<br>
         2.感想<br>
-        かんそうかんそう<br>
+        か<br>
       </div>
     </div>
   
@@ -66,7 +68,7 @@
   </div>
                                                              
   <div class=footer>
-    作成日：2022年09月21日
+    作成日：2022年09月28日
   </div>
 </body>
 </html>
