--- a/rep03.html
+++ b/rep03.html
@@ -48,9 +48,13 @@
         1.内容<br>
         VRゴーグルを使ってVR体験をした。
         実習2周目の3次元モデルのVR体験では、3次元モデルの中のものを移動させたり、球を出したりできた。
-        会議室のVR体験は、ホワイトボードに書いたり、<br>
+        会議室のVR体験は、ホワイトボードに書いたり、他の人と会話できたりした。
+        <br>
         2.感想<br>
-        か<br>
+        VRゴーグルをすると、実際にあるみたいに見えて不思議な感じでした。
+        会議室の方のVR体験の技術を使えば、確かに授業にも使えそうだと思いました。
+        その場にいなくても、ホワイトボードに書けるし、他の人と会話もできるので、VRをできる環境があれば世界中で繋がることができると思いました。
+     　　VRゴーグルをすると、一瞬で周りの世界が変わったような感じがして、楽しかったです。<br>
       </div>
     </div>
   
